--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh-cmn-Hans">
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>爱电影</title>
+    <style>
+        #container {
+            position: absolute;
+            top: 64px;
+            margin-bottom: 64px;
+        }
+        
+        .loading {
+            text-align: center;
+            font-size: 2rem;
+            width: 100vw;
+        }
+    </style>
 </head>
 
 <body>
