modify some vue compentene

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <style>
         #container {
             position: absolute;
-            top: 64px;
-            margin-bottom: 64px;
+            top: 8vh;
         }
         
         .loading {
