modify pull down loading

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         #container {
             position: absolute;
             top: 8vh;
+            width: 100vw;
         }
         
         .loading {
             text-align: center;
             font-size: 2rem;
-            width: 100vw;
+            width: 100%;
         }
     </style>
 </head>
