--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
 <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?8fd44d8613e53ea7a73a88cb570e3220";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </body>
-</body>
+
 
 </html>
